<resources>
    <string name="app_name">UDPProject</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="port">Port:</string>
    <string name="packet_size_bytes">Packet Size[Bytes]:</string>
    <string name="delay_ms">Delay[ms]:</string>
    <string name="measurement">Measurement:</string>
    <string name="average_delay">Average Delay:</string>
    <string name="max_delay">Max Delay:</string>
    <string name="min_delay">Min Delay:</string>
    <string name="loss_ratio">Loss Ratio:</string>
    <string name="packets_transmitted">Packets Transmitted:</string>
    <string name="packets_received">Packets Received:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="test_duration">Test Duration[Sec]:</string>
    <string name="jitter_buffer_ms">Jitter Buffer[ms]:</string>
    <string name="icmp">ICMP</string>
    <string name="count">Count:</string>
    <string name="wait">Wait:</string>
    <string name="ignored_packets">Ignored Packets:</string>
    <string name="_0">0</string>
</resources>
