<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".icmp.ICMPActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TableRow
        android:id="@+id/tr_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_bias="0.5">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/start" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/stop"
            android:enabled="false"/>
    </TableRow>

    <TextView
        android:id="@+id/countTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textSize="15sp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>


    <EditText
        android:id="@+id/countEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="textPersonName"
        android:text=""
        android:layout_toEndOf="@+id/countTextView"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/waitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:layout_below="@+id/countTextView"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

    <EditText
        android:id="@+id/waitEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="textPersonName"
        android:text=""
        android:layout_below="@+id/countEditText"
        android:layout_toEndOf="@+id/waitTextView"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/waitEditText"
        android:layout_marginTop="12dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/averageDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_delay"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/measurement"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

    <TextView
        android:id="@+id/maxDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_delay"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/averageDelay"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

    <TextView
        android:id="@+id/minDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_delay"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/maxDelay"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

    <TextView
        android:id="@+id/packetsTransmitted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/packets_transmitted"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/minDelay"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/packetsReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/packets_received"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/packetsTransmitted"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

    <TextView
        android:id="@+id/lossRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loss_ratio"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/packetsReceived"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

    <TextView
        android:id="@+id/elapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elapsed_time"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/lossRatio"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

</RelativeLayout>