<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableRow
        android:id="@+id/tr_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/btn_start_receiving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/start"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <Button
            android:id="@+id/btn_stop_receiving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/stop"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:enabled="false"/>
    </TableRow>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tr_send_message"
        android:layout_below="@id/lossRatio"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tv_data_from_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text=""/>
    </ScrollView>

    <TextView
        android:id="@+id/portTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>


    <EditText
        android:id="@+id/portEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_toEndOf="@+id/portTextView"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/portEditText"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/averageDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_delay"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/measurement"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

    <TextView
        android:id="@+id/maxDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_delay"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/averageDelay"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

    <TextView
        android:id="@+id/minDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_delay"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/maxDelay"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>

    <TextView
        android:id="@+id/lossRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loss_ratio"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/minDelay"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>


</RelativeLayout>