<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TableRow
        android:id="@+id/tr_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/start"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/stop"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
    </TableRow>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tr_send_message"
        android:layout_below="@id/delayEditText"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/sentMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:text=""/>
    </ScrollView>

    <TextView
        android:id="@+id/ipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IP: "
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>


    <EditText
        android:id="@+id/ipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_toEndOf="@+id/ipTextView"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/portTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Port: "
        android:textSize="20sp"
        android:layout_below="@+id/ipTextView"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>


    <EditText
        android:id="@+id/portEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_toEndOf="@+id/portTextView"
        android:layout_below="@+id/ipEditText"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/packetSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/packet_size_bytes"
        android:layout_below="@+id/portTextView"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>


    <EditText
        android:id="@+id/packetSizeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="textPersonName"
        android:text=""
        android:layout_below="@+id/portEditText"
        android:layout_toEndOf="@+id/packetSizeTextView"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/delayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delay_ms"
        android:layout_below="@+id/packetSizeTextView"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </TextView>


    <EditText
        android:id="@+id/delayEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="textPersonName"
        android:text=""
        android:layout_below="@+id/packetSizeEditText"
        android:layout_toEndOf="@+id/delayTextView"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

</RelativeLayout>